7/7.11.tf
resource "aws_route" "private" {
    route_table_id = aws_route_table.private.id
    nat_gateway_id = aws_nat_gateway.example.id
    destination_cidr_block = "0.0.0.0/0"
}
