7/7.19.tf
resource "aws_security_group_rule" "egress_example" { 
    type = "egress" 
    from_port = 0 
    to_port = 0 
    protocol = "-1" 
    cidr_blocks = ["0.0.0.0/0"] 
    security_group_id = aws_security_group.example.id 
}
