7/7.9.tf
resource "aws_eip" "nat_gateway" {
    vpc = true
    depends_on = [aws_internet_gateway.example]
}
